# tree-sitter-exoterra

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-exoterra.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_exoterra/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterExoterra/: exoterra.h
bindings/swift/TreeSitterExoterraTests/: TreeSitterExoterraTests.swift
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: concept  terraform  terratest
