[package]
name = "tree-sitter-exoterra"
description = "Tree sitter grammar for terra witht language extensions"
version = "0.1.0"
authors = ["Torsten Keßler <t.kessler@posteo.de> <t.kessler@posteo.de>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "exoterra"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tpkessler/tree-sitter-exoterra"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
